[package]
name = "how-to-wrap-your-errors-with-enums-when-using-error-stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper="0.17.1"
error-stack="0.3.1"
reqwest = {version="0.11.18",features=["blocking"]}