[package]
name = "github_api_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.7", features = ["json"]}
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
httpmock = "0.6"
