[package]
name = "web-template-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
minijinja = { version = "0.32.1", features = ["builtins"] }
serde = { version = "1.0.173", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
